Add GET:/users/role-mappings
